add basic Iden3 issuer state relaying endpoint structure
