# internal/types/service_grpc.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.2.0
+// - protoc-gen-go-grpc v1.3.0
 // - protoc             (unknown)
 // source: service.proto
 
@@ -18,12 +18,21 @@ import (
 // Requires gRPC-Go v1.32.0 or later.
 const _ = grpc.SupportPackageIsVersion7
 
+const (
+	Service_StateRelay_FullMethodName      = "/Service/StateRelay"
+	Service_GistRelay_FullMethodName       = "/Service/GistRelay"
+	Service_AggregatedRelay_FullMethodName = "/Service/AggregatedRelay"
+	Service_StateRelays_FullMethodName     = "/Service/StateRelays"
+	Service_GISTRelays_FullMethodName      = "/Service/GISTRelays"
+)
+
 // ServiceClient is the client API for Service service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type ServiceClient interface {
 	StateRelay(ctx context.Context, in *MsgStateRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error)
 	GistRelay(ctx context.Context, in *MsgGISTRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error)
+	AggregatedRelay(ctx context.Context, in *MsgAggregatedRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error)
 	StateRelays(ctx context.Context, in *MsgRelaysRequest, opts ...grpc.CallOption) (*MsgRelaysResponse, error)
 	GISTRelays(ctx context.Context, in *MsgRelaysRequest, opts ...grpc.CallOption) (*MsgRelaysResponse, error)
 }
@@ -38,7 +47,7 @@ func NewServiceClient(cc grpc.ClientConnInterface) ServiceClient {
 
 func (c *serviceClient) StateRelay(ctx context.Context, in *MsgStateRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error) {
 	out := new(MsgRelayResponse)
-	err := c.cc.Invoke(ctx, "/Service/StateRelay", in, out, opts...)
+	err := c.cc.Invoke(ctx, Service_StateRelay_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -47,7 +56,16 @@ func (c *serviceClient) StateRelay(ctx context.Context, in *MsgStateRelayRequest
 
 func (c *serviceClient) GistRelay(ctx context.Context, in *MsgGISTRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error) {
 	out := new(MsgRelayResponse)
-	err := c.cc.Invoke(ctx, "/Service/GistRelay", in, out, opts...)
+	err := c.cc.Invoke(ctx, Service_GistRelay_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *serviceClient) AggregatedRelay(ctx context.Context, in *MsgAggregatedRelayRequest, opts ...grpc.CallOption) (*MsgRelayResponse, error) {
+	out := new(MsgRelayResponse)
+	err := c.cc.Invoke(ctx, Service_AggregatedRelay_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -56,7 +74,7 @@ func (c *serviceClient) GistRelay(ctx context.Context, in *MsgGISTRelayRequest, 
 
 func (c *serviceClient) StateRelays(ctx context.Context, in *MsgRelaysRequest, opts ...grpc.CallOption) (*MsgRelaysResponse, error) {
 	out := new(MsgRelaysResponse)
-	err := c.cc.Invoke(ctx, "/Service/StateRelays", in, out, opts...)
+	err := c.cc.Invoke(ctx, Service_StateRelays_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -65,7 +83,7 @@ func (c *serviceClient) StateRelays(ctx context.Context, in *MsgRelaysRequest, o
 
 func (c *serviceClient) GISTRelays(ctx context.Context, in *MsgRelaysRequest, opts ...grpc.CallOption) (*MsgRelaysResponse, error) {
 	out := new(MsgRelaysResponse)
-	err := c.cc.Invoke(ctx, "/Service/GISTRelays", in, out, opts...)
+	err := c.cc.Invoke(ctx, Service_GISTRelays_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -78,6 +96,7 @@ func (c *serviceClient) GISTRelays(ctx context.Context, in *MsgRelaysRequest, op
 type ServiceServer interface {
 	StateRelay(context.Context, *MsgStateRelayRequest) (*MsgRelayResponse, error)
 	GistRelay(context.Context, *MsgGISTRelayRequest) (*MsgRelayResponse, error)
+	AggregatedRelay(context.Context, *MsgAggregatedRelayRequest) (*MsgRelayResponse, error)
 	StateRelays(context.Context, *MsgRelaysRequest) (*MsgRelaysResponse, error)
 	GISTRelays(context.Context, *MsgRelaysRequest) (*MsgRelaysResponse, error)
 }
@@ -91,6 +110,9 @@ func (UnimplementedServiceServer) StateRelay(context.Context, *MsgStateRelayRequ
 }
 func (UnimplementedServiceServer) GistRelay(context.Context, *MsgGISTRelayRequest) (*MsgRelayResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GistRelay not implemented")
+}
+func (UnimplementedServiceServer) AggregatedRelay(context.Context, *MsgAggregatedRelayRequest) (*MsgRelayResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AggregatedRelay not implemented")
 }
 func (UnimplementedServiceServer) StateRelays(context.Context, *MsgRelaysRequest) (*MsgRelaysResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method StateRelays not implemented")
@@ -120,7 +142,7 @@ func _Service_StateRelay_Handler(srv interface{}, ctx context.Context, dec func(
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Service/StateRelay",
+		FullMethod: Service_StateRelay_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ServiceServer).StateRelay(ctx, req.(*MsgStateRelayRequest))
@@ -138,10 +160,28 @@ func _Service_GistRelay_Handler(srv interface{}, ctx context.Context, dec func(i
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Service/GistRelay",
+		FullMethod: Service_GistRelay_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ServiceServer).GistRelay(ctx, req.(*MsgGISTRelayRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Service_AggregatedRelay_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(MsgAggregatedRelayRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServiceServer).AggregatedRelay(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Service_AggregatedRelay_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServiceServer).AggregatedRelay(ctx, req.(*MsgAggregatedRelayRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -156,7 +196,7 @@ func _Service_StateRelays_Handler(srv interface{}, ctx context.Context, dec func
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Service/StateRelays",
+		FullMethod: Service_StateRelays_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ServiceServer).StateRelays(ctx, req.(*MsgRelaysRequest))
@@ -174,7 +214,7 @@ func _Service_GISTRelays_Handler(srv interface{}, ctx context.Context, dec func(
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/Service/GISTRelays",
+		FullMethod: Service_GISTRelays_FullMethodName,
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(ServiceServer).GISTRelays(ctx, req.(*MsgRelaysRequest))
@@ -196,6 +236,10 @@ var Service_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GistRelay",
 			Handler:    _Service_GistRelay_Handler,
+		},
+		{
+			MethodName: "AggregatedRelay",
+			Handler:    _Service_AggregatedRelay_Handler,
 		},
 		{
 			MethodName: "StateRelays",
